--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,8 @@
 fixtures:
   repositories:
     stdlib: http://github.com/puppetlabs/puppetlabs-stdlib.git
+    apt:
+      repo: git://github.com/puppetlabs/puppetlabs-apt.git
+      ref: 2.1.0
   symlinks:
     java: "#{source_dir}"
